# trabalho2-persistencia

./: .env  README.md  database.db  populate_db.py  pyproject.toml
alembic/: env.py
alembic/versions/: be7086bd7942_cria_tabelas_iniciais.py
app/: database.py  main.py  models.py
app/routes/: atores.py  avaliacoes.py  filmes.py
